Add coding standards

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         <title>Presentations • David M. Lloyd</title>
     </head>
     <body>
-        Presentations by topic:
+        <h2>Presentations by topic:</h2>
         <ul>
+            <li><a href="coding-standards/index.html">Coding standards</a></li>
             <li><a href="security/index.html">Security meeting notes</a></li>
         </ul>
     </body>
