--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <ul>
             <li><a href="coding-standards/index.html">Coding standards</a></li>
             <li><a href="security/index.html">Security meeting notes</a></li>
+            <li><a href="security-manager/index.html">All about security managers</a></li>
         </ul>
     </body>
 </html>
