Bytecode hacks presentations

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <li><a href="coding-standards/index.html">Coding standards</a></li>
             <li><a href="security/index.html">Security meeting notes</a></li>
             <li><a href="security-manager/index.html">All about security managers</a></li>
+            <li><a href="bytecode-hacks/index.html">A couple of bytecode hacks</a></li>
         </ul>
     </body>
 </html>
