WildFly common preso

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <li><a href="security/index.html">Security meeting notes</a></li>
             <li><a href="security-manager/index.html">All about security managers</a></li>
             <li><a href="bytecode-hacks/index.html">A couple of bytecode hacks</a></li>
+            <li><a href="wildfly-common/index.html">The WildFly Common project (or not)</a></li>
         </ul>
     </body>
 </html>
