--- a/wildfly-common/index.html
+++ b/wildfly-common/index.html
@@ -82,7 +82,7 @@
                     <li class="fragment">Base64 anything</li>
                 </ul>
             </li>
-            <li class="fragment">These things would be worthy of their own project!</li>
+            <li class="fragment">These things are probably worthy of their own projects!</li>
         </ul>
     </section>
 
