Fix some reveal glitches

--- a/coding-standards/index.html
+++ b/coding-standards/index.html
@@ -193,10 +193,14 @@
                 <ul class="fragment">
                     <li>Right: "@param name the connection's name"</li>
                     <li>Wrong: "@param name The connection's name."</li>
-                    <li class="fragment">Right: "@return a new connection instance"</li>
+                </ul>
+                <ul class="fragment">
+                    <li>Right: "@return a new connection instance"</li>
                     <li>Wrong: "@return Returns a new connection instance. It's super nifty."</li>
-                    <li class="fragment">Do <em>not</em> write full paragraphs, just single phrases</li>
-                    <li>Details go in the method description</li>
+                </ul>
+                <ul class="fragment">
+                    <li>Do <em>not</em> write full paragraphs, just single phrases</li>
+                    <li class="fragment">Details go in the method description</li>
                 </ul>
             </li>
         </ul>
