--- a/wildfly-common/index.html
+++ b/wildfly-common/index.html
@@ -90,14 +90,16 @@
         <ul class="fragment">
             <li>Like any other project, mostly...</li>
             <li class="fragment">But scope would be managed with an iron fist!</li>
+            <li class="fragment">At <a href="https://github.com/dmlloyd/wildfly-common/tree/master/common">GitHub</a></li>
         </ul>
     </section>
 
     <section>
-        <h2>Or else what?</h2>
+        <h2>Possible categorized common projects</h2>
         <ul class="fragment">
-            <li>Or else I'm not doing it...</li>
-            <li class="fragment">But someone else can, if they wish</li>
+            <li>Common annotation processing: likely</li>
+            <li class="fragment">Common collections (basic & concurrent): possible</li>
+            <li class="fragment">Common concurrency utilities (lighter atomics, ???): maybe</li>
         </ul>
     </section>
 
