Fixes and add JDeparser presentation

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li><a href="security-manager/index.html">All about security managers</a></li>
             <li><a href="bytecode-hacks/index.html">A couple of bytecode hacks</a></li>
             <li><a href="wildfly-common/index.html">The WildFly Common project (or not)</a></li>
+            <li><a href="jdeparser/index.html">The JDeparser 2 project</a></li>
         </ul>
     </body>
 </html>
