--- a/coding-standards/index.html
+++ b/coding-standards/index.html
@@ -125,7 +125,8 @@
             </li>
             <li class="fragment">Document serializable representation</li>
             <li class="fragment">Remember @param for type parameters</li>
-            <li class="fragment">Separate paragraphs with &lt;p&gt; tags (no closing tags please)</li>
+            <li class="fragment">Separate paragraphs with &lt;p&gt; tags</li>
+            <li class="fragment">Never close self-closing HTML tags like &lt;p&gt; - Java 8 and on will error</li>
             <li class="fragment">Avoid &lt;br&gt; and &amp;nbsp;</li>
         </ul>
 
