--- a/new-doclet/index.html
+++ b/new-doclet/index.html
@@ -170,6 +170,7 @@
             <li class="fragment">Automatic <code>@since</code> generation? Somehow?</li>
             <li class="fragment">Add <code>{@rfc ####}</code> tag to link to <a href="https://tools.ietf.org/html/rfc####">https://tools.ietf.org/html/rfc####</a></li>
             <li class="fragment">Add <code>{@jsr ####}</code> tag to link to <a href="https://jsp.org/en/jsr/detail?id=####">https://jsp.org/en/jsr/detail?id=####</a></li>
+            <li class="fragment">Decent syntax highlighting like <a href="http://wildfly.github.io/jandex/org/jboss/jandex/package-summary.html#package.description">Jandex</a> has</li>
         </ul>
     </section>
 
@@ -208,6 +209,11 @@
         <p class="fragment">This beautiful bit of code: <a href="http://clementbtc.github.io/genesis/index.html?com/projetloki/genesis/Genesis.html">Genesis</a></p>
     </section>
 
+    <section id="impl-mod-other">
+        <h2>Modular HTML, JS</h2>
+        <p class="fragment">Really essential to make this extensible in a reasonable way</p>
+    </section>
+
     <section id="feas">
         <h1>Feasibility</h1>
     </section>
@@ -230,6 +236,10 @@
             <li class="fragment">Option 2: make it a strictly after-hours project</li>
             <li class="fragment">Option 3: wait for Oracle to do it (hint: unlikely but <a href="http://openjdk.java.net/jeps/224">possible</a>)</li>
         </ul>
+    </section>
+
+    <section id="br">
+        <h1>Brainstorm more requirements and implementation ideas!</h1>
     </section>
 
     <section id="end">
