--- a/jdeparser/index.html
+++ b/jdeparser/index.html
@@ -26,9 +26,9 @@
 <head>
     <meta charset="utf-8">
 
-    <title>All About Security Managers</title>
+    <title>JDeparser 2</title>
 
-    <meta name="description" content="All About Security Managers">
+    <meta name="description" content="JDeparser 2">
     <meta name="author" content="David M. Lloyd">
 
     <meta name="apple-mobile-web-app-capable" content="yes"/>
