--- a/security-manager/index.html
+++ b/security-manager/index.html
@@ -308,6 +308,10 @@
             <li class="fragment">Fixed serialVersionUID</li>
             <li class="fragment">Compatibility</li>
         </ul>
+
+        <aside class="notes">
+            What happens when new names/actions are added?
+        </aside>
     </section>
 
     <section id="wfsm">
