MSC 2 is delegated

--- a/wildfly-arch-future/index.html
+++ b/wildfly-arch-future/index.html
@@ -171,17 +171,7 @@
     </section>
 
     <section id="msc2">
-        <h1>MSC 2</h1>
-    </section>
-
-    <section id="msc2-status">
-        <h2>Status</h2>
-        <ul>
-            <li class="fragment">Actively developed</li>
-            <li class="fragment">Very close to Beta</li>
-            <li class="fragment">All core functionality is done</li>
-            <li class="fragment">Some API cleanups and enhancements remain</li>
-        </ul>
+        <h1>MSC 2...</h1>
     </section>
 </div>
 
